[package]
name = "efuse-api"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jtag = { path = "../jtag" }
efuse-ecc = { path = "../efuse-ecc" }
alloc-riscv = { path = "../alloc-riscv" }
libc = "0.2"
